# rag

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
core/layers/: chunker.py  embedder.py  entity_generation.py  extraction.py  minio_upload.py  qdrant_upload.py
core/layers/chunkers/: __init__.py  base.py  recursive.py  registry.py
core/layers/embedders/: __init__.py  base.py  openai_embeddings.py  registry.py
core/layers/entity_extractors/: __init__.py  base.py  registry.py  spacy_extractor.py
core/layers/extractors/: __init__.py  base.py  docx.py  pdf.py  registry.py  txt.py
core/tasks/: ingest.py  pipeline.py  store.py  transform.py
k8s/: configmap.yaml  secrets.yaml.example
k8s/celery/: deployment.yaml
k8s/fastapi/: deployment.yaml  service.yaml
k8s/minio/: pvc.yaml  service.yaml  statefulset.yaml
k8s/qdrant/: pvc.yaml  service.yaml  statefulset.yaml
src/config/: celery_config.py  config.py
src/db/: clients.py
src/db/models/: document_models.py
src/utils/: hash_file.py
test_files/: CustomerCopy.docx  Hello.docx
