[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "celery>=5.6.3",
    "fastapi[standard]>=0.135.3",
    "kombu>=5.6.2",
    "minio>=7.2.20",
    "pydantic-settings>=2.13.1",
    "qdrant-client>=1.17.1",
    "redis>=7.4.0",
]
